src/test/ui/issues/issue-XXXX/issue-2151.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-2151.rs:3:5
   |
LL |     let x = panic!();
   |         - consider giving `x` a type
LL |     x.clone();
   |     ^ cannot infer type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
